Criado a pasta data com as configurações de applicationDbContext. realizado a 1 migração e o primeiro Update-dataBase

--- a/Blog_Escola/appsettings.json
+++ b/Blog_Escola/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConection": "Data Source=./;Initial Catalog=Db_Escola_DotNet;Persist Security Info=True;User ID=sa;Password=Jcam@1507"
+  }
 }
